--- a/test2.html
+++ b/test2.html
@@ -51,7 +51,7 @@
     </div>
 
 
-    <div class="cube resizefromuser ololbackground2">
+    <div class="cube resizefromuser ololbackground2 BORDER1">
         <div class="top lol casesizex01">lel</div>
         <div class="bottom lol casesizex01">lel</div>
         <div class="left lol casesizex01">lel</div>
@@ -63,7 +63,7 @@
         <div class="bottomleft lol casesizex01">lel</div>
     </div>
     <table class="casesizex01">
-        <caption class="tabletitle">tableau 1</caption>
+        <caption class="tabletitle BORDER1">tableau 1</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -82,7 +82,7 @@
         </tr>
     </table>
     <table class="casesizex02">
-        <caption class="tabletitle">tableau 2</caption>
+        <caption class="tabletitle BORDER1">tableau 2</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -101,7 +101,7 @@
         </tr>
     </table>
     <table class="casesizex03">
-        <caption class="tabletitle">tableau 3</caption>
+        <caption class="tabletitle BORDER1">tableau 3</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -120,7 +120,7 @@
         </tr>
     </table>
     <table class="casesizex04">
-        <caption class="tabletitle">tableau 4</caption>
+        <caption class="tabletitle BORDER1">tableau 4</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -139,7 +139,7 @@
         </tr>
     </table>
     <table class="casesizex05">
-        <caption class="tabletitle">tableau 5</caption>
+        <caption class="tabletitle BORDER1">tableau 5</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -158,7 +158,7 @@
         </tr>
     </table>
     <table class="casesizex06">
-        <caption class="tabletitle">tableau 6</caption>
+        <caption class="tabletitle BORDER1">tableau 6</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -177,7 +177,7 @@
         </tr>
     </table>
     <table class="casesizex07">
-        <caption class="tabletitle">tableau 7</caption>
+        <caption class="tabletitle BORDER1">tableau 7</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -196,7 +196,7 @@
         </tr>
     </table>
     <table class="casesizex08">
-        <caption class="tabletitle">tableau 8</caption>
+        <caption class="tabletitle BORDER1">tableau 8</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -215,7 +215,7 @@
         </tr>
     </table>
     <table class="casesizex09">
-        <caption class="tabletitle">tableau 9</caption>
+        <caption class="tabletitle BORDER1">tableau 9</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -235,7 +235,7 @@
     </table>
 
     <table class="casesizex1">
-        <caption class="tabletitle">tableau 10</caption>
+        <caption class="tabletitle BORDER1">tableau 10</caption>
         <tr>
             <th>Nom</th>
             <th>Âge</th>
@@ -253,74 +253,135 @@
             <td>Cli Cli</td>
         </tr>
     </table>
-    <div class="iwannabeatable lal">
-        <div class="imthetablechild lal">
-            <div class="imthetablechild lal">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
+    <div class="flextable lal">
+        <div class="flextablechild lal">
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
         </div>
-        <div class="imthetablechild lal">
-            <div class="imthetablechild lal">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
+        <div class="flextablechild lal">
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
         </div>
-        <div class="imthetablechild lal">
-            <div class="imthetablechild lal">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
+        <div class="flextablechild lal">
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+
         </div>
-        <div class="imthetablechild lal">
-            <div class="imthetablechild lal">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
-            <div class="imthetablechild">lol</div>
+        <div class="flextablechild lal">
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
+            <div class="flextablechild lal">lol</div>
         </div>
     </div>
 </body>
