commit de changement de branche

--- a/test2.html
+++ b/test2.html
@@ -62,327 +62,203 @@
         <div class="bottomright lol casesizex01">lel</div>
         <div class="bottomleft lol casesizex01">lel</div>
     </div>
-    <table class="casesizex01">
-        <caption class="tabletitle BORDER1">tableau 1</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+    <div>
+        <table class="casesizex01">
+            <caption class="tabletitle BORDER1">tableau 1</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex02">
-        <caption class="tabletitle BORDER1">tableau 2</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex02">
+            <caption class="tabletitle BORDER1">tableau 2</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex03">
-        <caption class="tabletitle BORDER1">tableau 3</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex03">
+            <caption class="tabletitle BORDER1">tableau 3</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex04">
-        <caption class="tabletitle BORDER1">tableau 4</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex04">
+            <caption class="tabletitle BORDER1">tableau 4</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex05">
-        <caption class="tabletitle BORDER1">tableau 5</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex05">
+            <caption class="tabletitle BORDER1">tableau 5</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex06">
-        <caption class="tabletitle BORDER1">tableau 6</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex06">
+            <caption class="tabletitle BORDER1">tableau 6</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex07">
-        <caption class="tabletitle BORDER1">tableau 7</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex07">
+            <caption class="tabletitle BORDER1">tableau 7</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex08">
-        <caption class="tabletitle BORDER1">tableau 8</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex08">
+            <caption class="tabletitle BORDER1">tableau 8</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <table class="casesizex09">
-        <caption class="tabletitle BORDER1">tableau 9</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex09">
+            <caption class="tabletitle BORDER1">tableau 9</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
 
-    <table class="casesizex1">
-        <caption class="tabletitle BORDER1">tableau 10</caption>
-        <tr>
-            <th>Nom</th>
-            <th>Âge</th>
-            <th>Pays</th>
-        </tr>
+        <table class="casesizex1">
+            <caption class="tabletitle BORDER1">tableau 10</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
 
-        <tr>
-            <td>Cloud</td>
-            <td>666 ans</td>
-            <td>Midgar</td>
-        </tr>
-        <tr>
-            <td>Morsay</td>
-            <td>3 ans</td>
-            <td>Cli Cli</td>
-        </tr>
-    </table>
-    <div class="flextable lal">
-        <div class="flextablechild lal">
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-        </div>
-        <div class="flextablechild lal">
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-        </div>
-        <div class="flextablechild lal">
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+    </div>
+    <div class="flextable">
+        <div class="flextable">lol</div>
+        <div class="flextable1">lol</div>
 
-        </div>
-        <div class="flextablechild lal">
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-            <div class="flextablechild lal">lol</div>
-        </div>
     </div>
 </body>
 
