--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Projet SIMPLonMARS3 - CSS Framework">
+        <meta name="author" content="Okba, Jean-Jacques, Alice, Kevin">
+        <title>CSS Framework - PRESENTATION</title>
+        <link rel="stylesheet" href="AcSS/reset.css">
+        <link rel="stylesheet" href="AcSS/normalize.css">
+        <link rel="stylesheet" href="AcSS/nav.css">
+        <link rel="stylesheet" href="AcSS/grid.css">
+        <link rel="stylesheet" href="AcSS/utils.css">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CSS Framework - PRESENTATION</title>
-    <link rel="stylesheet" href="AcSS/reset.css">
-    <link rel="stylesheet" href="AcSS/normalize.css">
-    <link rel="stylesheet" href="AcSS/nav.css">
-    <link rel="stylesheet" href="AcSS/grid.css">
-    <link rel="stylesheet" href="AcSS/utils.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
 
-    <link rel="stylesheet" href="css/style.css">
-</head>
+        <div id="wrapper">
+            <header>
+                <h1>Présentation du framework CSS</h1>
+            </header>
 
-<body>
-
-    <div id="wrapper">
-        <header>
-            <h1>Présentation du framework CSS</h1>
-        </header>
-
-        <div id="wrapper-main">
-            <main>
+            <div id="wrapper-main">
+                <main>
                 <article>
                     <h2>Règles de reset.css</h2>
                     <section>
@@ -190,6 +190,16 @@
 
                 <article>
                     <h2>Règles de utils.css</h2>
+                    <section>
+                        <h3>Utilisation des règles de utils.css</h3>
+                        <div class="rules-container">
+                            <div class="rule-container">
+                                <div class="rule-text" style="width:100%">
+                                    Ajouter la classe à l'élément désiré<br>c'est tout
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                     <section>
                         <h3>Padding Top</h3>
                         <div class="rules-container">
@@ -2083,19 +2093,19 @@
                         </div>
                     </section>
                 </article>
-            </main>
-        </div>
+                </main>
+            </div>
 
-        <footer>
-            <h2>
+            <footer>
+                <h2>
                     <a href="example.html">
-                        Exemple
+                        Example
                     </a>
                 </h2>
-        </footer>
-    </div>
+            </footer>
+        </div>
 
-    <!--
+        <!--
             <section>
             <h3>Titre</h3>
             <div class="rules-container">
@@ -2105,6 +2115,7 @@
             Salut
             </div>
             <div class="rule-show">
+            <div>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
             </div>
             <div class="">
@@ -2116,6 +2127,5 @@
             </section>
         -->
 
-</body>
-
+    </body>
 </html>
