--- a/test.html
+++ b/test.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CSS Framework - TEST</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/nav.css">
-        <link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/utils.css">
+        <link rel="stylesheet" href="AcSS/reset.css">
+        <link rel="stylesheet" href="AcSS/nav.css">
+        <link rel="stylesheet" href="AcSS/grid.css">
+        <link rel="stylesheet" href="AcSS/utils.css">
 
-        <link rel="stylesheet" href="test.css">
+        <link rel="stylesheet" href="css/test.css">
     </head>
     <body>
 
@@ -179,6 +179,284 @@
             TEXTE DE REMPLISSAGE
         </footer>
 
+        <h2>Test de grid.css</h2>
+        <div class="casesizex1 lol maxcontentsize05">
+            <div class="grid casesizex08 ololbackground1">
+                <div class="maxcontentsize01 lel">lel2</div>
+                <div class="maxcontentsize02 lel">lel5</div>
+                <div class="maxcontentsize03 lel">lel</div>
+                <div class="maxcontentsize04 lel">lel</div>
+                <div class="maxcontentsize05 lel">lel</div>
+                <div class="maxcontentsize06 lel">lel</div>
+                <div class="maxcontentsize07 lel">lel</div>
+                <div class="maxcontentsize08 lel">lel</div>
+                <div class="maxcontentsize09 lel">lel</div>
+                <div class="maxcontentsize1 lel">lel</div>
+                <div class="maxcontentsize09 lel">lel</div>
+                <div class="maxcontentsize08 lel">lel</div>
+                <div class="maxcontentsize07 lel">lel</div>
+                <div class="maxcontentsize06 lel">lel</div>
+                <div class="maxcontentsize05 lel">lel</div>
+                <div class="maxcontentsize04 lel">lel</div>
+                <div class="maxcontentsize03 lel">lel</div>
+                <div class="maxcontentsize02 lel">lel</div>
+                <div class="maxcontentsize01 lel">lel</div>
+            </div>
+            <div class="maxcontentsize03 ololbackground1">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize05 lel">lel</div>
+            <div class="maxcontentsize06 lel">lel</div>
+            <div class="maxcontentsize05 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize04 lel">lel</div>
+            <div class="maxcontentsize03 lel">lel</div>
+        </div>
+
+
+        <div class="cube resizefromuser ololbackground2">
+            <div class="top lol casesizex01">lel</div>
+            <div class="bottom lol casesizex01">lel</div>
+            <div class="left lol casesizex01">lel</div>
+            <div class="right lol casesizex01">lel</div>
+            <div class="middle lol casesizex01">lel</div>
+            <div class="topleft lol casesizex01">lel</div>
+            <div class="topright lol casesizex01">lel</div>
+            <div class="bottomright lol casesizex01">lel</div>
+            <div class="bottomleft lol casesizex01">lel</div>
+        </div>
+        <table class="casesizex01">
+            <caption class="tabletitle">tableau 1</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex02">
+            <caption class="tabletitle">tableau 2</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex03">
+            <caption class="tabletitle">tableau 3</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex04">
+            <caption class="tabletitle">tableau 4</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex05">
+            <caption class="tabletitle">tableau 5</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex06">
+            <caption class="tabletitle">tableau 6</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex07">
+            <caption class="tabletitle">tableau 7</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex08">
+            <caption class="tabletitle">tableau 8</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+        <table class="casesizex09">
+            <caption class="tabletitle">tableau 9</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+
+        <table class="casesizex1">
+            <caption class="tabletitle">tableau 10</caption>
+            <tr>
+                <th>Nom</th>
+                <th>Âge</th>
+                <th>Pays</th>
+            </tr>
+
+            <tr>
+                <td>Cloud</td>
+                <td>666 ans</td>
+                <td>Midgar</td>
+            </tr>
+            <tr>
+                <td>Morsay</td>
+                <td>3 ans</td>
+                <td>Cli Cli</td>
+            </tr>
+        </table>
+
+        <h2>Test de nav.css</h2>
+        <nav class="menu">
+            <p><a href="#">m</a></p>
+            <ul class="menu">
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">À propos</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">À propos</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <p></p>
+
+        <nav class="menu">
+            <p><a href="#">m</a></p>
+            <ul class="menu">
+                <li><a href="#">Lien menu 1</a>
+                    <ul>
+                        <li><a href="#">lien sous menu 1</a></li>
+                        <li><a href="#">lien sous menu 1</a></li>
+                        <li><a href="#">lien sous menu 1</a></li>
+                        <li><a href="#">lien sous menu 1</a></li>
+                    </ul>
+                </li><!--
+                --><li><a href="#">Lien menu 2</a>
+                    <ul>
+                        <li><a href="#">Lien sous menu 2</a></li>
+                        <li><a href="#">Lien sous menu 2</a></li>
+                        <li><a href="#">Lien sous menu 2</a></li>
+                        <li><a href="#">Lien sous menu 2</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
 
         <h2>Test de utils.css</h2>
         <h3>Padding Top</h3></h3>
