Fixed various things

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
                 <article>
                     <h2>Règles de utils.css</h2>
                     <section>
+                        <h3>Utilisation des règles de utils.css</h3>
+                        <div class="rules-container">
+                            <div class="rule-container">
+                                <div class="rule-text" style="width:100%">
+                                    Ajouter la classe à l'élément désiré<br>c'est tout
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
                         <h3>Padding Top</h3>
                         <div class="rules-container">
                             <h4>PADDINGTOP1</h4>
@@ -2087,7 +2097,7 @@
             <footer>
                 <h2>
                     <a href="example.html">
-                        Exemple
+                        Example
                     </a>
                 </h2>
             </footer>
@@ -2103,6 +2113,7 @@
             Salut
             </div>
             <div class="rule-show">
+            <div>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
             </div>
             <div class="">
