added meta tags in htmls (except test.html)

--- a/example.html
+++ b/example.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Projet SIMPLonMARS3 - CSS Framework">
+        <meta name="author" content="Okba, Jean-Jacques, Alice, Kevin">
         <title>CSS Framework - EXAMPLE</title>
         <link rel="stylesheet" href="AcSS/reset.css">
         <link rel="stylesheet" href="AcSS/normalize.css">
